# evalforge

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish-npm.yml  publish-pypi.yml
docs/: index.html
examples/: example_basic.py  example_regression.py  observability_example.py
python/: README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
python/evalforge/: __init__.py  __main__.py  harness.py  observability.py  registry.py  reporter.py  runner.py  scorer.py  test_case.py
python/evalforge/integrations/: __init__.py  anthropic.py  openai.py
python/tests/: test_cli.py  test_harness.py  test_integrations.py  test_observability.py  test_registry.py  test_reporter.py  test_runner.py  test_scorer.py  test_test_case.py
typescript/: package-lock.json  package.json  tsconfig.json
typescript/examples/: example_basic.ts  example_regression.ts
typescript/src/: harness.ts  index.ts  observability.ts  registry.ts  reporter.ts  runner.ts  scorer.ts  testCase.ts
typescript/src/integrations/: anthropic.ts  openai.ts
typescript/src/types/: optional-deps.d.ts
